Add property pattern implication in reasoner-elk-snomed